force-app/main/default/objects/Encounter__c/Encounter__c.object-meta.xml
<CustomObject>
    <description>Lightweight stand-in for Health Cloud ClinicalEncounter.</description>
    <label>Encounter</label>
    <nameField>
        <displayFormat>ENC-{00000}</displayFormat>
        <label>Encounter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encounters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>