force-app/main/default/objects/Encounter__c/fields/Encounter_Date__c.field-meta.xml
<CustomField>
    <fullName>Encounter_Date__c</fullName>
    <label>Encounter Date</label>
    <type>DateTime</type>
</CustomField>