force-app/main/default/objects/Encounter__c/fields/Encounter_Type__c.field-meta.xml
<CustomField>
    <fullName>Encounter_Type__c</fullName>
    <label>Encounter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office Visit</fullName>
            </value>
            <value>
                <fullName>Telehealth</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Inpatient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>