force-app/main/default/objects/Encounter__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Encounters</relationshipLabel>
    <relationshipName>Encounters</relationshipName>
    <type>Lookup</type>
</CustomField>